--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
+    "@openzeppelin/contracts": "^3.4.0-solc-0.7",
     "ethers": "^5.0.28",
-    "hardhat": "^2.0.8"
+    "hardhat": "^2.0.8",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.3",
+    "solhint": "^3.3.2",
+    "solhint-plugin-prettier": "^0.0.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
