--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "downlevelIteration": true,
     "outDir": "dist"
   },
-  "include": ["test"],
+  "include": ["tasks"],
   "files": ["hardhat.config.ts"]
 }
