add status logs

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/chai": "^4.2.14",
     "@uniswap/lib": "^4.0.1-alpha",
     "chai": "^4.3.0",
+    "dayjs": "^1.10.4",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.28",
     "hardhat": "^2.0.8",
