--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ghost",
+  "name": "alchemist",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:thegostep/ghost.git",
+  "repository": "git@github.com:thegostep/alchemist.git",
   "author": "thegostep @thegostep",
   "license": "MIT",
   "devDependencies": {
