update repo ref

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alchemist",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:thegostep/alchemist.git",
+  "repository": "git@github.com:alchemistcoin/alchemist.git",
   "author": "thegostep @thegostep",
   "license": "MIT",
   "devDependencies": {
