--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "chai": "^4.3.0",
     "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.28",
     "hardhat": "^2.0.10",
